feat(watcher): optimize live pipeline and fix multiline /track parsing
- switch chain ingestion to getBlock(..., true) and request receipts only for matched tracked addresses

- add RPC throttler with min interval + exponential backoff and expose backoff in heartbeat logs

- introduce block queue limits and startup provider smoke-check logs for watcher stability

- add fail-fast config validation when CHAIN_WATCHER_ENABLED=true and provider URLs are missing

- fix Telegram multiline command parsing so each /track in one message is processed independently

- support two-line /track format (address on first line, label on next line)

- add explicit Ethereum address format/checksum validation with user-facing errors

- add tests for chain stream optimization, throttler, config fail-fast, and telegram multiline parsing

- update .env.example, docker-compose and README with safe free-tier watcher defaults

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,12 @@ PORT=3000
 LOG_LEVEL=info
 TELEGRAM_ENABLED=false
 CHAIN_WATCHER_ENABLED=false
+CHAIN_RECEIPT_CONCURRENCY=2
+CHAIN_RPC_MIN_INTERVAL_MS=350
+CHAIN_BACKOFF_BASE_MS=1000
+CHAIN_BACKOFF_MAX_MS=30000
+CHAIN_BLOCK_QUEUE_MAX=120
+CHAIN_HEARTBEAT_INTERVAL_SEC=60
 BOT_TOKEN=
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/whale_alert_bot
 ETH_ALCHEMY_WSS_URL=
