--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,12 @@ services:
       LOG_LEVEL: ${LOG_LEVEL:-info}
       TELEGRAM_ENABLED: ${TELEGRAM_ENABLED:-false}
       CHAIN_WATCHER_ENABLED: ${CHAIN_WATCHER_ENABLED:-false}
+      CHAIN_RECEIPT_CONCURRENCY: ${CHAIN_RECEIPT_CONCURRENCY:-2}
+      CHAIN_RPC_MIN_INTERVAL_MS: ${CHAIN_RPC_MIN_INTERVAL_MS:-350}
+      CHAIN_BACKOFF_BASE_MS: ${CHAIN_BACKOFF_BASE_MS:-1000}
+      CHAIN_BACKOFF_MAX_MS: ${CHAIN_BACKOFF_MAX_MS:-30000}
+      CHAIN_BLOCK_QUEUE_MAX: ${CHAIN_BLOCK_QUEUE_MAX:-120}
+      CHAIN_HEARTBEAT_INTERVAL_SEC: ${CHAIN_HEARTBEAT_INTERVAL_SEC:-60}
       DATABASE_URL: ${DATABASE_URL:-postgres://postgres:postgres@postgres:5432/whale_alert_bot}
       BOT_TOKEN: ${BOT_TOKEN:-0000000000:TEST_TOKEN_FOR_DOCKER}
       ETH_ALCHEMY_WSS_URL: ${ETH_ALCHEMY_WSS_URL:-wss://example.invalid/alchemy}
