feat(bot): improve telegram UX, wallet callback history, html history view, etherscan fallback, and remove jest remnants
Telegram UX\n- added richer /help and list interaction patterns\n- improved command feedback for track/list/untrack/history\n\nHistory formatting\n- switched history output to structured HTML with compact transaction links\n- improved readability of direction, status, and timestamps\n\nCallback flow\n- added inline wallet buttons and callback handling for quick history access\n- fixed callback parsing and wallet reference resolution\n\nEtherscan fallback\n- introduced fallback to token transfer history when regular tx list is empty\n- normalized history mapping for ETH and ERC20 transaction responses\n\nType/interface extraction\n- extracted bot/tracking/history contracts into dedicated interface files\n- tightened explicit typing across service and update handlers\n\nTesting\n- added/updated unit tests for telegram update and tracking history behavior\n- covered callback path and multiline command parsing regressions\n\nTooling cleanup\n- removed project jest e2e config remnants\n- aligned lint/test tooling to vitest-only setup

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ ETH_ALCHEMY_WSS_URL=
 ETH_INFURA_WSS_URL=
 UNISWAP_SWAP_ALLOWLIST=
 ETHERSCAN_TX_BASE_URL=https://etherscan.io/tx/
+ETHERSCAN_API_BASE_URL=https://api.etherscan.io/v2/api
+ETHERSCAN_API_KEY=
