--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ UNISWAP_SWAP_ALLOWLIST=
 ETHERSCAN_TX_BASE_URL=https://etherscan.io/tx/
 ETHERSCAN_API_BASE_URL=https://api.etherscan.io/v2/api
 ETHERSCAN_API_KEY=
+HISTORY_CACHE_TTL_SEC=120
+HISTORY_RATE_LIMIT_PER_MINUTE=12
+HISTORY_BUTTON_COOLDOWN_SEC=3
+HISTORY_STALE_ON_ERROR_SEC=600
