feat(alerts): improve live signal quality with enrichment and anti-noise suppression
- extend ClassifiedEvent with direction, token metadata fields and formatted value
- enrich alerts via TokenMetadataService and AlertEnrichmentService
- add AlertSuppressionService to suppress zero-value transfers and burst duplicates
- upgrade alert formatter with readable direction/token/value output
- add config knobs ALERT_MIN_SEND_INTERVAL_SEC and TOKEN_META_CACHE_TTL_SEC
- update env/readme runbook for live alert quality controls
- add tests for classifier, formatter, enrichment, suppression and config defaults

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ UNISWAP_SWAP_ALLOWLIST=
 ETHERSCAN_TX_BASE_URL=https://etherscan.io/tx/
 ETHERSCAN_API_BASE_URL=https://api.etherscan.io/v2/api
 ETHERSCAN_API_KEY=
+ALERT_MIN_SEND_INTERVAL_SEC=10
+TOKEN_META_CACHE_TTL_SEC=3600
 HISTORY_CACHE_TTL_SEC=120
 HISTORY_RATE_LIMIT_PER_MINUTE=12
 HISTORY_BUTTON_COOLDOWN_SEC=3
