feat(watcher): add reorg-safe confirmations and checkpoint backfill recovery
- add CHAIN_REORG_CONFIRMATIONS config with safe default
- add chain_checkpoints migration and repository
- extend RPC provider contract with getLatestBlockNumber
- process only finalized blocks (observed - confirmations)
- persist last processed block checkpoint after successful processing
- restore missed finalized blocks from checkpoint on startup (bounded by queue limit)
- add watcher tests for finalized processing and startup replay from checkpoint
- update README/env defaults for reorg confirmation behavior

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ CHAIN_BACKOFF_BASE_MS=1000
 CHAIN_BACKOFF_MAX_MS=30000
 CHAIN_BLOCK_QUEUE_MAX=120
 CHAIN_HEARTBEAT_INTERVAL_SEC=60
+CHAIN_REORG_CONFIRMATIONS=2
 BOT_TOKEN=
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/whale_alert_bot
 ETH_ALCHEMY_WSS_URL=
