fix(telegram): normalize wallet id for callbacks and add local bot harness tests
- fix wallet callback/menu lookup when wallet_id is returned as string from DB bigint

- normalize wallet ids in tracking service for list/history/wallet flows

- add telegram local harness utilities and focused harness specs

- add npm script test:telegram:harness and README section

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:cov": "vitest run --coverage",
+    "test:telegram:harness": "vitest run src/telegram/testing/local-bot-harness.spec.ts",
     "test:e2e": "npm run build:test && vitest run --config vitest.e2e.config.ts",
     "prepare": "husky",
     "lint-staged": "lint-staged --concurrent false"
