--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "nest build",
-    "start": "nest start",
+    "start":    "nest start",
     "start:dev": "nest start --watch",
     "start:prod": "node dist/src/main.js",
     "lint": "eslint \"{src,test,scripts}/**/*.ts\" --max-warnings 0",
@@ -23,6 +23,7 @@
     "db:migrate": "tsx scripts/db/migrate.ts",
     "build:test": "tsc -p tsconfig.test.json",
     "check": "npm run lint && npm run db:validate && npm run typecheck && npm run test && npm run build",
+    "precommit": "npm run format:write && npm run lint && npm run typecheck && npm run test && npm run build",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:cov": "vitest run --coverage",
