--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,11 @@ UNISWAP_SWAP_ALLOWLIST=
 ETHERSCAN_TX_BASE_URL=https://etherscan.io/tx/
 ETHERSCAN_API_BASE_URL=https://api.etherscan.io/v2/api
 ETHERSCAN_API_KEY=
+COINGECKO_API_BASE_URL=https://api.coingecko.com/api/v3
+COINGECKO_TIMEOUT_MS=8000
+PRICE_CACHE_MAX_ENTRIES=1000
+PRICE_CACHE_FRESH_TTL_SEC=120
+PRICE_CACHE_STALE_TTL_SEC=600
 ALERT_MIN_SEND_INTERVAL_SEC=10
 TOKEN_META_CACHE_TTL_SEC=3600
 HISTORY_CACHE_TTL_SEC=120
