feat(filters): add cex flow filter and exchange address matching
CEX flow filtering:
- add /filter cex <off|in|out|all>
- persist cex_flow_mode in user_alert_settings
- show cex flow mode in /filters, /status and wallet card

Alert pipeline:
- add CexAddressBookService with built-in known exchange addresses
- support custom exchange addresses via ETH_CEX_ADDRESS_ALLOWLIST
- apply cex flow policy in dispatcher before telegram delivery

Event model:
- extend ClassifiedEvent with counterpartyAddress for transfer context
- propagate counterparty from ERC20 Transfer log classifier

Storage and config:
- add migration 009 for cex_flow_mode with checksum-safe SQL pair
- update app config types/service and .env.example

Testing:
- add cex address book unit tests
- extend policy, dispatcher, tracking, telegram, harness and chain tests

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/whale_alert_bot
 ETH_ALCHEMY_WSS_URL=
 ETH_INFURA_WSS_URL=
 UNISWAP_SWAP_ALLOWLIST=
+ETH_CEX_ADDRESS_ALLOWLIST=
 ETHERSCAN_TX_BASE_URL=https://etherscan.io/tx/
 ETHERSCAN_API_BASE_URL=https://api.etherscan.io/v2/api
 ETHERSCAN_API_KEY=
