chore(sol): add solana rpc smoke-check protocol and env placeholders

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ BOT_TOKEN=
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/whale_alert_bot
 ETH_ALCHEMY_WSS_URL=
 ETH_INFURA_WSS_URL=
+SOLANA_HELIUS_HTTP_URL=https://api.mainnet-beta.solana.com
+SOLANA_HELIUS_WSS_URL=wss://api.mainnet-beta.solana.com
+SOLANA_PUBLIC_HTTP_URL=https://solana-rpc.publicnode.com
+SOLANA_PUBLIC_WSS_URL=wss://solana-rpc.publicnode.com
 UNISWAP_SWAP_ALLOWLIST=
 ETH_CEX_ADDRESS_ALLOWLIST=
 ETHERSCAN_TX_BASE_URL=https://etherscan.io/tx/
