feat(config): add solana watcher config, fail-fast validation and health checks

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ PORT=3000
 LOG_LEVEL=info
 TELEGRAM_ENABLED=false
 CHAIN_WATCHER_ENABLED=false
+SOLANA_WATCHER_ENABLED=false
 CHAIN_RECEIPT_CONCURRENCY=2
 CHAIN_RPC_MIN_INTERVAL_MS=350
 CHAIN_BACKOFF_BASE_MS=1000
