feat(release): add app version status and telegram release notes workflow
Release workflow:

- add APP_VERSION to runtime config with package.json fallback

- include app version in /status response

- add release notes builder and CLI sender script

- document release process in README with commands

- wire APP_VERSION and RELEASE_NOTES_CHAT_ID env placeholders

Testing:

- add unit tests for AppConfig version resolution

- extend telegram update and local harness tests for version output

- add release notes message builder tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       dockerfile: Dockerfile
     environment:
       NODE_ENV: ${NODE_ENV:-development}
+      APP_VERSION: ${APP_VERSION:-0.1.0}
       PORT: ${PORT:-3000}
       LOG_LEVEL: ${LOG_LEVEL:-info}
       TELEGRAM_ENABLED: ${TELEGRAM_ENABLED:-false}
