--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NODE_ENV=development
+APP_VERSION=0.1.0
 PORT=3000
 LOG_LEVEL=info
 TELEGRAM_ENABLED=false
@@ -12,6 +13,7 @@ CHAIN_BLOCK_QUEUE_MAX=120
 CHAIN_HEARTBEAT_INTERVAL_SEC=60
 CHAIN_REORG_CONFIRMATIONS=2
 BOT_TOKEN=
+RELEASE_NOTES_CHAT_ID=
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/whale_alert_bot
 ETH_ALCHEMY_WSS_URL=
 ETH_INFURA_WSS_URL=
