feat(tron): add TRON history fallback via TronGrid and Tronscan links
TRON history support:

- add domain adapter src/integrations/explorers/tron/tron-grid-history.adapter.ts

- route explorer requests for tron_mainnet in HistoryExplorerRouterAdapter

- enable TRON history in TrackingService and generate Tronscan tx links

- wire TronGrid adapter in TrackingModule

Config and runtime hardening:

- add TRON_GRID_API_BASE_URL, TRON_GRID_API_KEY, TRONSCAN_TX_BASE_URL

- treat empty optional API keys as null to avoid Docker startup crash

- bump app version to 0.1.1 and sync env/docker defaults

Docs and UX:

- refresh README with TRON fallback architecture and smoke-check examples

- extend Telegram hints/start text for TRON history commands

- refresh release notes content for v0.1.1

Testing:

- add TronGrid adapter unit tests (native/TRC20 mapping and chain guard)

- extend router tests for TRON routing

- add tracking test for TRON local history tx links

- add config test for empty TRON_GRID_API_KEY handling

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV=development
-APP_VERSION=0.1.0
+APP_VERSION=0.1.1
 PORT=3000
 LOG_LEVEL=info
 TELEGRAM_ENABLED=false
@@ -26,6 +26,9 @@ ETH_CEX_ADDRESS_ALLOWLIST=
 ETHERSCAN_TX_BASE_URL=https://etherscan.io/tx/
 ETHERSCAN_API_BASE_URL=https://api.etherscan.io/v2/api
 ETHERSCAN_API_KEY=
+TRON_GRID_API_BASE_URL=https://api.trongrid.io
+TRON_GRID_API_KEY=
+TRONSCAN_TX_BASE_URL=https://tronscan.org/#/transaction/
 COINGECKO_API_BASE_URL=https://api.coingecko.com/api/v3
 COINGECKO_TIMEOUT_MS=8000
 PRICE_CACHE_MAX_ENTRIES=1000
