--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       dockerfile: Dockerfile
     environment:
       NODE_ENV: ${NODE_ENV:-development}
-      APP_VERSION: ${APP_VERSION:-0.1.0}
+      APP_VERSION: ${APP_VERSION:-0.1.1}
       PORT: ${PORT:-3000}
       LOG_LEVEL: ${LOG_LEVEL:-info}
       TELEGRAM_ENABLED: ${TELEGRAM_ENABLED:-false}
@@ -40,6 +40,9 @@ services:
       ETHERSCAN_TX_BASE_URL: ${ETHERSCAN_TX_BASE_URL:-https://etherscan.io/tx/}
       ETHERSCAN_API_BASE_URL: ${ETHERSCAN_API_BASE_URL:-https://api.etherscan.io/v2/api}
       ETHERSCAN_API_KEY: ${ETHERSCAN_API_KEY:-}
+      TRON_GRID_API_BASE_URL: ${TRON_GRID_API_BASE_URL:-https://api.trongrid.io}
+      TRON_GRID_API_KEY: ${TRON_GRID_API_KEY:-}
+      TRONSCAN_TX_BASE_URL: ${TRONSCAN_TX_BASE_URL:-https://tronscan.org/#/transaction/}
     ports:
       - '3000:3000'
     restart: unless-stopped
