feat(tron): add live watcher pipeline and rpc adapters
TRON Live Watcher
- added TronChainStreamService with queue, checkpoint recovery, dedupe and alert dispatch pipeline
- enabled chain routing for tron_mainnet in ProviderFactory/ProviderFailover flow
- added TRON chain id mapping for persisted events and dispatcher chain resolution

RPC Integrations
- added BaseTronRpcAdapter with polling subscribeBlocks + getnowblock/getblockbynum/gettransactioninfobyid support
- added primary/fallback adapters for TRON and registered DI tokens in ChainModule
- added TRON watcher config, fail-fast validation and health checks

Alert Delivery
- made alert inline actions chain-aware for ETH/SOL/TRON (explorer/chart/portfolio links)
- fixed canonical trackedAddress propagation for mixed-case addresses in watcher pipeline

Testing
- added positive tests for TRON RPC adapter and TRON chain stream service
- expanded provider failover/factory and config tests for TRON watcher paths
- extended ethereum chain stream test for mixed-case tracked address matching

Docs and Ops
- updated README with TRON watcher settings, fail-fast rules and smoke-check commands
- updated .env.example and docker-compose defaults for TRON watcher
- bumped app version to 0.1.2 and refreshed release-notes/latest.md

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 NODE_ENV=development
-APP_VERSION=0.1.1
+APP_VERSION=0.1.2
 PORT=3000
 LOG_LEVEL=info
 TELEGRAM_ENABLED=false
 CHAIN_WATCHER_ENABLED=false
 SOLANA_WATCHER_ENABLED=false
+TRON_WATCHER_ENABLED=false
 CHAIN_RECEIPT_CONCURRENCY=2
 CHAIN_RPC_MIN_INTERVAL_MS=350
 CHAIN_BACKOFF_BASE_MS=1000
@@ -21,6 +22,8 @@ SOLANA_HELIUS_HTTP_URL=https://api.mainnet-beta.solana.com
 SOLANA_HELIUS_WSS_URL=wss://api.mainnet-beta.solana.com
 SOLANA_PUBLIC_HTTP_URL=https://solana-rpc.publicnode.com
 SOLANA_PUBLIC_WSS_URL=wss://solana-rpc.publicnode.com
+TRON_PRIMARY_HTTP_URL=https://api.trongrid.io
+TRON_FALLBACK_HTTP_URL=https://api.trongrid.io
 UNISWAP_SWAP_ALLOWLIST=
 ETH_CEX_ADDRESS_ALLOWLIST=
 ETHERSCAN_TX_BASE_URL=https://etherscan.io/tx/
