--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,8 @@ services:
       CHAIN_RECEIPT_CONCURRENCY: ${CHAIN_RECEIPT_CONCURRENCY:-2}
       CHAIN_RPC_MIN_INTERVAL_MS: ${CHAIN_RPC_MIN_INTERVAL_MS:-350}
       CHAIN_BACKOFF_BASE_MS: ${CHAIN_BACKOFF_BASE_MS:-1000}
-      CHAIN_BACKOFF_MAX_MS: ${CHAIN_BACKOFF_MAX_MS:-30000}
+      CHAIN_SOLANA_BACKOFF_BASE_MS: ${CHAIN_SOLANA_BACKOFF_BASE_MS:-5000}
+      CHAIN_BACKOFF_MAX_MS: ${CHAIN_BACKOFF_MAX_MS:-60000}
       CHAIN_BLOCK_QUEUE_MAX: ${CHAIN_BLOCK_QUEUE_MAX:-120}
       CHAIN_HEARTBEAT_INTERVAL_SEC: ${CHAIN_HEARTBEAT_INTERVAL_SEC:-60}
       DATABASE_URL: ${DATABASE_URL:-postgres://postgres:postgres@postgres:5432/whale_alert_bot}
