feat(stream): add per-chain backpressure and bounded catchup for solana/tron

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV=development
-APP_VERSION=0.1.2
+APP_VERSION=0.1.3
 PORT=3000
 LOG_LEVEL=info
 TELEGRAM_ENABLED=false
@@ -12,6 +12,12 @@ CHAIN_BACKOFF_BASE_MS=1000
 CHAIN_SOLANA_BACKOFF_BASE_MS=5000
 CHAIN_BACKOFF_MAX_MS=60000
 CHAIN_BLOCK_QUEUE_MAX=120
+CHAIN_SOLANA_QUEUE_MAX=120
+CHAIN_TRON_QUEUE_MAX=120
+CHAIN_SOLANA_CATCHUP_BATCH=40
+CHAIN_TRON_CATCHUP_BATCH=40
+CHAIN_SOLANA_POLL_INTERVAL_MS=2000
+CHAIN_TRON_POLL_INTERVAL_MS=2000
 CHAIN_HEARTBEAT_INTERVAL_SEC=60
 CHAIN_REORG_CONFIRMATIONS=2
 BOT_TOKEN=
