--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       dockerfile: Dockerfile
     environment:
       NODE_ENV: ${NODE_ENV:-development}
-      APP_VERSION: ${APP_VERSION:-0.1.2}
+      APP_VERSION: ${APP_VERSION:-0.1.3}
       PORT: ${PORT:-3000}
       LOG_LEVEL: ${LOG_LEVEL:-info}
       TELEGRAM_ENABLED: ${TELEGRAM_ENABLED:-false}
@@ -35,6 +35,12 @@ services:
       CHAIN_SOLANA_BACKOFF_BASE_MS: ${CHAIN_SOLANA_BACKOFF_BASE_MS:-5000}
       CHAIN_BACKOFF_MAX_MS: ${CHAIN_BACKOFF_MAX_MS:-60000}
       CHAIN_BLOCK_QUEUE_MAX: ${CHAIN_BLOCK_QUEUE_MAX:-120}
+      CHAIN_SOLANA_QUEUE_MAX: ${CHAIN_SOLANA_QUEUE_MAX:-120}
+      CHAIN_TRON_QUEUE_MAX: ${CHAIN_TRON_QUEUE_MAX:-120}
+      CHAIN_SOLANA_CATCHUP_BATCH: ${CHAIN_SOLANA_CATCHUP_BATCH:-40}
+      CHAIN_TRON_CATCHUP_BATCH: ${CHAIN_TRON_CATCHUP_BATCH:-40}
+      CHAIN_SOLANA_POLL_INTERVAL_MS: ${CHAIN_SOLANA_POLL_INTERVAL_MS:-2000}
+      CHAIN_TRON_POLL_INTERVAL_MS: ${CHAIN_TRON_POLL_INTERVAL_MS:-2000}
       CHAIN_HEARTBEAT_INTERVAL_SEC: ${CHAIN_HEARTBEAT_INTERVAL_SEC:-60}
       DATABASE_URL: ${DATABASE_URL:-postgres://postgres:postgres@postgres:5432/whale_alert_bot}
       BOT_TOKEN: ${BOT_TOKEN:-0000000000:TEST_TOKEN_FOR_DOCKER}
