fix(lint): fix eslint.config.mjs

--- a/package.json
+++ b/package.json
@@ -25,14 +25,30 @@
     "smoke:solana": "tsx scripts/smoke/solana-rpc-smoke.ts",
     "build:test": "tsc -p tsconfig.test.json",
     "check": "npm run lint && npm run db:validate && npm run typecheck && npm run test && npm run build",
-    "precommit": "npm run format:write && npm run lint && npm run typecheck && npm run test && npm run build",
+    "precommit": "npm run format:write && npm run lint && npm run lint:boundaries && npm run lint:circular && npm run typecheck && npm run test && npm run build",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:cov": "vitest run --coverage",
     "test:telegram:harness": "vitest run src/telegram/testing/local-bot-harness.spec.ts",
     "test:e2e": "npm run build:test && vitest run --config vitest.e2e.config.ts",
     "prepare": "husky",
-    "lint-staged": "lint-staged --concurrent false"
+    "lint-staged": "lint-staged --concurrent false",
+    "madge": "madge --circular --extensions ts src/",
+    "madge:image": "madge --image graph.png --extensions ts src/",
+    "depcruise": "depcruise src --output-type dot | dot -T svg > deps.svg",
+    "depcruise:html": "depcruise src --output-type html > deps.html",
+    "arch:check": "npm run madge && npm run lint -- --rule 'boundaries/element-types: error'",
+    "arch:visualize": "npm run madge:image && npm run depcruise",
+
+    "lint:boundaries": "eslint --rule 'boundaries/element-types: error' src/",
+    "lint:circular": "madge --circular --extensions ts --no-color --no-spinner src/ || (echo '❌ Циклические зависимости найдены! Запусти npm run madge:image для визуализации' && exit 1)",
+    "lint:madge": "madge --extensions ts src/ --json > madge-report.json",
+    "lint:depcruise": "depcruise src --output-type err-long",
+
+    "depcruise:svg": "depcruise src --output-type dot | dot -T svg > deps.svg",
+
+    "audit:fast": "npm run lint && npm run lint:circular",
+    "audit:full": "npm run lint && npm run lint:boundaries && npm run lint:circular && npm run depcruise:json"
   },
   "lint-staged": {
     "{src,test,scripts}/**/*.ts": [
@@ -63,34 +79,38 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.18.0",
+    "@eslint/js": "^9.22.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/eslint": "^9.6.1",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.13.10",
     "@types/pg": "^8.15.5",
     "@types/supertest": "^6.0.2",
-    "eslint": "^9.18.0",
+    "dependency-cruiser": "^16.9.0",
+    "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^4.4.4",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.2.2",
+    "eslint-plugin-boundaries": "^5.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.5",
     "eslint-plugin-promise": "^7.2.1",
-    "eslint-plugin-sonarjs": "^3.0.5",
-    "eslint-plugin-unused-imports": "^4.3.0",
+    "eslint-plugin-sonarjs": "^3.0.2",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.5",
-    "prettier": "^3.4.2",
+    "madge": "^8.0.0",
+    "prettier": "^3.5.3",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.20.5",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0",
+    "typescript-eslint": "^8.26.1",
     "vitest": "^3.2.4"
   }
 }
