--- a/package.json
+++ b/package.json
@@ -39,14 +39,11 @@
     "depcruise:html": "depcruise src --output-type html > deps.html",
     "arch:check": "npm run madge && npm run lint -- --rule 'boundaries/element-types: error'",
     "arch:visualize": "npm run madge:image && npm run depcruise",
-
-    "lint:boundaries": "eslint --rule 'boundaries/element-types: error' src/",
+    "lint:boundaries": "eslint --plugin boundaries --rule 'boundaries/element-types: error' src/",
     "lint:circular": "madge --circular --extensions ts --no-color --no-spinner src/ || (echo '❌ Циклические зависимости найдены! Запусти npm run madge:image для визуализации' && exit 1)",
     "lint:madge": "madge --extensions ts src/ --json > madge-report.json",
     "lint:depcruise": "depcruise src --output-type err-long",
-
     "depcruise:svg": "depcruise src --output-type dot | dot -T svg > deps.svg",
-
     "audit:fast": "npm run lint && npm run lint:circular",
     "audit:full": "npm run lint && npm run lint:boundaries && npm run lint:circular && npm run depcruise:json"
   },
@@ -109,7 +106,7 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.7.3",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.26.1",
     "vitest": "^3.2.4"
   }
