--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "ethers": "^6.15.0",
     "kysely": "^0.28.5",
     "nestjs-telegraf": "^2.9.1",
+    "node-cache": "^5.1.2",
     "pg": "^8.16.3",
     "postgrator": "^8.0.0",
     "prom-client": "^15.1.3",
