--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "release:notes": "tsx scripts/release/send-release-notes.ts",
     "smoke:solana": "tsx scripts/smoke/solana-rpc-smoke.ts",
     "build:test": "tsc -p tsconfig.test.json",
+    "find-dead-code": "npx knip",
     "check": "npm run lint && npm run db:validate && npm run typecheck && npm run test && npm run build",
-    "precommit": "npm run format:write && npm run lint && npm run lint:boundaries && npm run lint:circular && npm run typecheck && npm run test && npm run build",
+    "precommit": "npm run lint:fix && npm run format:write && npm run lint && npm run lint:boundaries && npm run lint:circular && npm run typecheck && npm run find-dead-code && npm run test && npm run build",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:cov": "vitest run --coverage",
@@ -101,6 +102,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
+    "knip": "^5.83.1",
     "lint-staged": "^16.1.5",
     "madge": "^8.0.0",
     "prettier": "^3.5.3",
