--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
-    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "bottleneck": "^2.19.5",
@@ -80,16 +79,14 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.22.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
-    "@types/eslint": "^9.6.1",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
     "@types/pg": "^8.15.5",
-    "@types/supertest": "^6.0.2",
+    "@vitest/coverage-v8": "^3.2.4",
     "dependency-cruiser": "^16.9.0",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.0.1",
@@ -106,11 +103,6 @@
     "lint-staged": "^16.1.5",
     "madge": "^8.0.0",
     "prettier": "^3.5.3",
-    "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.26.1",
