feat(api): add scenario tests for REST API

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "scripts": {
     "build": "nest build",
     "start": "cross-env NODE_ENV=production nest start --env-file .env",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch --env-file .env",
-    "start:test": "cross-env NODE_ENV=test nest start --env-file .env",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch --env-file .env.dev.local",
+    "start:test": "cross-env NODE_ENV=test nest start --env-file .env.test.local",
     "start:prod": "cross-env NODE_ENV=production node --env-file=.env dist/src/main.js",
     "lint": "eslint \"{src,test,scripts}/**/*.ts\" --max-warnings 0",
     "lint:fix": "eslint \"{src,test,scripts}/**/*.ts\" --fix",
@@ -27,12 +27,13 @@
     "build:test": "tsc -p tsconfig.test.json",
     "find-dead-code": "npx knip",
     "check": "npm run lint && npm run db:validate && npm run typecheck && npm run test && npm run build",
-    "precommit": "npm run lint:fix && npm run format:write && npm run lint && npm run lint:boundaries && npm run lint:circular && npm run typecheck && npm run find-dead-code && npm run test && npm run build",
+    "precommit": "npm run lint:fix && npm run format:write && npm run lint && npm run lint:boundaries && npm run lint:circular && npm run typecheck && npm run find-dead-code && npm run test && npm run test:scenario && npm run build",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:cov": "vitest run --coverage",
     "test:telegram:harness": "vitest run src/modules/telegram/bot/testing/local-bot-harness.spec.ts",
     "test:e2e": "npm run build:test && vitest run --config vitest.e2e.config.ts",
+    "test:scenario": "vitest run --config vitest.scenario.config.ts",
     "prepare": "husky",
     "lint-staged": "lint-staged --concurrent false",
     "madge": "madge --circular --extensions ts src/",
