feat(api): add tma auth via initData and aggregated /api/tma/init endpoint

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_VERSION=0.1.3
 PORT=3000
 LOG_LEVEL=info
 TELEGRAM_ENABLED=false
+TMA_ENABLED=false
 CHAIN_WATCHER_ENABLED=false
 SOLANA_WATCHER_ENABLED=false
 TRON_WATCHER_ENABLED=false
@@ -21,6 +22,9 @@ CHAIN_TRON_POLL_INTERVAL_MS=2000
 CHAIN_HEARTBEAT_INTERVAL_SEC=60
 CHAIN_REORG_CONFIRMATIONS=2
 BOT_TOKEN=
+TMA_BASE_URL=
+TMA_BOT_USERNAME=
+TMA_ALLOWED_ORIGINS=
 RELEASE_NOTES_CHAT_ID=
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/whale_alert_bot
 ETH_ALCHEMY_WSS_URL=
