docs(deploy): add tma nginx rollout guide and production configuration notes

--- a/.env.prod.example
+++ b/.env.prod.example
@@ -25,6 +25,12 @@ CHAIN_REORG_CONFIRMATIONS=2
 BOT_TOKEN=
 RELEASE_NOTES_CHAT_ID=
 
+# --- Telegram Mini App ---
+TMA_ENABLED=false
+TMA_BASE_URL=
+TMA_BOT_USERNAME=
+TMA_ALLOWED_ORIGINS=
+
 # --- Database (используется docker-compose.prod.yml для postgres контейнера) ---
 POSTGRES_USER=whale
 POSTGRES_PASSWORD=
