feat(tma): stabilize startup, build in ci/cd, and add prominent mini app entry

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,6 +25,7 @@ jobs:
             cd /opt/whale-alert-bot
             git fetch origin main
             git reset --hard origin/main
+            docker run --rm -v /opt/whale-alert-bot/tma:/app -w /app node:22-alpine sh -lc "npm ci --no-audit --no-fund && npm run build"
             docker compose -f docker-compose.prod.yml up --build -d
             sleep 15
             curl -sf http://localhost:3000/health || echo "Health check failed"
