--- a/tma/package.json
+++ b/tma/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.67.2",
     "@telegram-apps/sdk-react": "^3.3.0",
+    "@telegram-apps/telegram-ui": "^2.1.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5"
