feat(tma): add precommit parity and optimize build/deploy pipeline
- add full tma precommit gate (format/lint/typecheck/test/build) and run it from husky pre-commit

- switch CI/CD to artifact-based tma delivery (upload dist in CI, deploy dist archive in CD)

- align scripts/deploy.sh with artifact flow and atomic dist swap

- optimize tma runtime with lazy route splitting, vendor chunking, and react-query defaults

- add route helper tests and tighten tma lint compliance

- update README and tma runbook for new quality/perf/deploy workflow

--- a/tma/package.json
+++ b/tma/package.json
@@ -7,7 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "format": "../node_modules/.bin/prettier --check \"src/**/*.{ts,tsx,css}\"",
+    "format:write": "../node_modules/.bin/prettier --write \"src/**/*.{ts,tsx,css}\"",
+    "lint": "../node_modules/.bin/eslint \"src/**/*.ts\" --max-warnings 0",
+    "test": "../node_modules/.bin/vitest run --config vitest.config.ts",
+    "precommit": "npm run format:write && npm run lint && npm run typecheck && npm run test && npm run build"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.67.2",
