--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,6 +14,28 @@ jobs:
     if: github.ref == 'refs/heads/main'
 
     steps:
+      - name: Download TMA dist artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: tma-dist
+          path: tma-dist
+
+      - name: Prepare TMA artifact archive
+        run: |
+          mkdir -p tma-deploy/dist
+          cp -R tma-dist/. tma-deploy/dist/
+          tar -czf tma-dist.tgz -C tma-deploy .
+
+      - name: Upload TMA archive to VPS
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_SSH_KEY }}
+          port: ${{ secrets.DEPLOY_PORT }}
+          source: tma-dist.tgz
+          target: /tmp
+
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1
         with:
@@ -25,7 +47,14 @@ jobs:
             cd /opt/whale-alert-bot
             git fetch origin main
             git reset --hard origin/main
-            docker run --rm -v /opt/whale-alert-bot/tma:/app -w /app node:22-alpine sh -lc "rm -rf dist && npm ci --no-audit --no-fund && npm run build"
+            mkdir -p /opt/whale-alert-bot/tma/dist.new
+            rm -rf /opt/whale-alert-bot/tma/dist.new/*
+            tar -xzf /tmp/tma-dist.tgz -C /opt/whale-alert-bot/tma/dist.new
+            rm -rf /opt/whale-alert-bot/tma/dist.prev
+            if [ -d /opt/whale-alert-bot/tma/dist ]; then mv /opt/whale-alert-bot/tma/dist /opt/whale-alert-bot/tma/dist.prev; fi
+            mv /opt/whale-alert-bot/tma/dist.new/dist /opt/whale-alert-bot/tma/dist
+            rm -rf /opt/whale-alert-bot/tma/dist.new /opt/whale-alert-bot/tma/dist.prev
+            rm -f /tmp/tma-dist.tgz
             docker compose -f docker-compose.prod.yml up -d postgres prometheus grafana
             docker compose -f docker-compose.prod.yml up --build -d --force-recreate app
             sleep 15
