--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
         with:
           node-version: 22
           cache: npm
+          cache-dependency-path: |
+            package-lock.json
+            tma/package-lock.json
       - run: npm ci
       - run: npm run lint
       - run: npm run db:validate
@@ -52,5 +55,13 @@ jobs:
         run: |
           cd tma
           npm ci
+          npm run lint
           npm run typecheck
+          npm run test
           npm run build
+      - name: Upload TMA dist artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: tma-dist
+          path: tma/dist
+          if-no-files-found: error
