--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,13 @@ HISTORY_CACHE_TTL_SEC=120
 HISTORY_RATE_LIMIT_PER_MINUTE=12
 HISTORY_BUTTON_COOLDOWN_SEC=3
 HISTORY_STALE_ON_ERROR_SEC=600
+HISTORY_HOT_CACHE_ENABLED=true
+HISTORY_HOT_CACHE_TOP_WALLETS=100
+HISTORY_HOT_CACHE_REFRESH_INTERVAL_SEC=30
+HISTORY_HOT_CACHE_PAGE_LIMIT=20
+HISTORY_HOT_CACHE_MAX_ITEMS_PER_WALLET=200
+HISTORY_HOT_CACHE_TTL_SEC=900
+HISTORY_HOT_CACHE_STALE_SEC=1800
 
 # --- Rate limiting (Bottleneck) ---
 METRICS_ENABLED=true
@@ -61,8 +68,12 @@ RATE_LIMIT_ETHERSCAN_MIN_TIME_MS=200
 RATE_LIMIT_ETHERSCAN_MAX_CONCURRENT=1
 RATE_LIMIT_SOLANA_HELIUS_MIN_TIME_MS=40
 RATE_LIMIT_SOLANA_HELIUS_MAX_CONCURRENT=5
+RATE_LIMIT_SOLANA_PUBLIC_MIN_TIME_MS=250
+RATE_LIMIT_SOLANA_PUBLIC_MAX_CONCURRENT=1
 RATE_LIMIT_TRON_GRID_MIN_TIME_MS=1000
 RATE_LIMIT_TRON_GRID_MAX_CONCURRENT=1
+RATE_LIMIT_TRON_PUBLIC_MIN_TIME_MS=1200
+RATE_LIMIT_TRON_PUBLIC_MAX_CONCURRENT=1
 RATE_LIMIT_COINGECKO_MIN_TIME_MS=2000
 RATE_LIMIT_COINGECKO_MAX_CONCURRENT=1
 RATE_LIMIT_ETH_RPC_MIN_TIME_MS=350
