feat(history): filter zero-value tx and enrich history with usd/swap context

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,10 @@ COINGECKO_TIMEOUT_MS=8000
 PRICE_CACHE_MAX_ENTRIES=1000
 PRICE_CACHE_FRESH_TTL_SEC=120
 PRICE_CACHE_STALE_TTL_SEC=600
+PRICE_HISTORY_CACHE_MAX_ENTRIES=5000
+PRICE_HISTORY_CACHE_TTL_SEC=86400
+PRICE_HISTORY_CACHE_STALE_SEC=604800
+PRICE_HISTORY_RANGE_MAX_AGE_DAYS=90
 ALERT_MIN_SEND_INTERVAL_SEC=10
 TOKEN_META_CACHE_TTL_SEC=3600
 HISTORY_CACHE_TTL_SEC=120
@@ -76,6 +80,8 @@ RATE_LIMIT_TRON_PUBLIC_MIN_TIME_MS=1200
 RATE_LIMIT_TRON_PUBLIC_MAX_CONCURRENT=1
 RATE_LIMIT_COINGECKO_MIN_TIME_MS=2000
 RATE_LIMIT_COINGECKO_MAX_CONCURRENT=1
+RATE_LIMIT_COINGECKO_HISTORY_MIN_TIME_MS=6000
+RATE_LIMIT_COINGECKO_HISTORY_MAX_CONCURRENT=1
 RATE_LIMIT_ETH_RPC_MIN_TIME_MS=350
 RATE_LIMIT_ETH_RPC_MAX_CONCURRENT=2
 
